@@ -1,0 +1,8 @@
+Description:
+  Copies
+  configuration file wice_grid_config.rb to  config/initializers/
+  wice_grid.js  to public/javascripts/
+  wice_grid.css to  public/stylesheets/
+  calendarview.js to public/javascripts/
+  calendarview.css to public/stylesheets/
+  wice_grid images to public/icons/grid
